force-app/main/default/objects/TaskParameterValueTemplate__c/TaskParameterValueTemplate__c.object-meta.xml
<CustomObject>
    <label>Task Parameter Value Template</label>
    <nameField>
        <displayFormat>TPVT-{00000}</displayFormat>
        <label>Task Parameter Value Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Parameter Value Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>