force-app/main/default/objects/TaskParameterValueTemplate__c/fields/EstimatedDurationFormula__c.field-meta.xml
<CustomField>
    <fullName>EstimatedDurationFormula__c</fullName>
    <label>Estimated Duration Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>