force-app/main/default/objects/TaskParameterValueTemplate__c/fields/FromValue__c.field-meta.xml
<CustomField>
    <fullName>FromValue__c</fullName>
    <label>From Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>