force-app/main/default/objects/TaskParameterValueTemplate__c/fields/PerUnitDuration__c.field-meta.xml
<CustomField>
    <fullName>PerUnitDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Per Unit Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>