force-app/main/default/objects/TaskParameterValueTemplate__c/fields/TaskParameterTemplateId__c.field-meta.xml
<CustomField>
    <fullName>TaskParameterTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Parameter Template</label>
    <referenceTo>TaskParameterTemplate__c</referenceTo>
    <relationshipLabel>Parameter Values</relationshipLabel>
    <relationshipName>ParameterValues</relationshipName>
    <type>Lookup</type>
</CustomField>