force-app/main/default/objects/TaskParameterValueTemplate__c/fields/ToValue__c.field-meta.xml
<CustomField>
    <fullName>ToValue__c</fullName>
    <label>To Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>